--- a/assets/css/pillar.css
+++ b/assets/css/pillar.css
@@ -92,7 +92,7 @@ html {
   position: absolute;
   top: 0;
   width: 25%;
-  height: 100%;
+  height: 50%;
   text-align: center;
 }
 .panel:hover{
@@ -148,6 +148,7 @@ html {
   position: relative;
   top: 37%;
   text-align: left;
+  text-shadow: 0px 0px 20px #000;
 }
 
 .text > h1 {
@@ -207,6 +208,7 @@ html {
   padding: 9px 20px 10px;
   border: 3px solid #0a99ab;
   border-radius: 400px;
+  box-shadow: 0px 0px 20px #333;
 }
 
 .bottom > a:hover {
