--- a/assets/css/pillar.css
+++ b/assets/css/pillar.css
@@ -10,7 +10,7 @@ html {
 
 #container {
   width: 100%;
-  height: 95%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
@@ -100,44 +100,44 @@ html {
   z-index:  1000;
 }
 
-.one {
+*[data-count='one'] {
   background: #11111100  center/cover no-repeat;
   left: 0;
 }
 
-.one:hover{
+*[data-count='one']:hover{
   background: #11111100 url("../images/background/pillars/bg3.jpg")
   center/cover no-repeat;
 
 }
 
-.two {
+*[data-count='two'] {
   background: #3333331f  center/cover no-repeat;
   left: 25%;
 }
 
-.two:hover {
+*[data-count='two']:hover {
   background: #33333370 url("../images/background/pillars/bg4.png")  center/cover no-repeat;
   left: 25%;
 }
 
-.three {
+*[data-count='three'] {
   background: #55555538  center/cover no-repeat;
   left: 50%;
 }
 
-.three:hover {
+*[data-count='three']:hover {
   background: #5555557a url("../images/background/pillars/bg2.png")  center/cover no-repeat;
   left: 50%;
 }
 
 
-.four {
+*[data-count='four'] {
   background: #31313157  center/cover no-repeat;
   left: 75%;
 }
 
-.four:hover {
+*[data-count='four']:hover {
   background: #aaaaaa8c url("../images/background/pillars/bg1.jpg")  center/cover no-repeat;
   left: 75%;
 }
@@ -320,24 +320,21 @@ html {
   height: 100%;
 }
 
-#display_mobile .one{
+#display_mobile[data-count='one']{
   background: #11111100 url("../images/background/pillars/bg3.jpg")
 }
 
-
-#display_mobile .two {
+#display_mobile[data-count='two']{
   background: #33333370 url("../images/background/pillars/bg4.png")  center/cover no-repeat;
 }
 
-#display_mobile .three {
+#display_mobile[data-count='three']{
   background: #5555557a url("../images/background/pillars/bg2.png")  center/cover no-repeat;
 }
 
-
-#display_mobile .four {
+#display_mobile[data-count='four']{
   background: #aaaaaa8c url("../images/background/pillars/bg1.jpg")  center/cover no-repeat;
 }
-
 
 #display_mobile .panel .buttom{
   top:60%;
