--- a/assets/css/navbarD.css
+++ b/assets/css/navbarD.css
@@ -140,7 +140,7 @@ a:focus {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -ms-flexbox;
-	display: flex
+	display: flex;
 }
 .card.horizontal.small .card-image, .card.horizontal.medium .card-image, .card.horizontal.large .card-image {
 	height: 100%;
@@ -156,7 +156,8 @@ a:focus {
 .card.horizontal .card-image img {
 	border-radius: 2px 0 0 2px;
 	max-width: 100%;
-	width: auto
+	width: auto;
+	z-index: -0.1;
 }
 .card.horizontal .card-stacked {
 	display: -webkit-box;
@@ -198,7 +199,7 @@ a:focus {
 	right: 0;
 	top: 0;
 	bottom: 0;
-	width: 100%
+	width: 100%;
 }
 .card .card-image .card-title {
 	color: #fff;
@@ -234,11 +235,11 @@ a:focus {
 	border-radius: 0 0 2px 2px
 }
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
-	color: #ffab40;
+	color: #0999ab;
 	margin-right: 24px;
 	-webkit-transition: color .3s ease;
 	transition: color .3s ease;
-	text-transform: uppercase
+	text-transform: uppercase;
 }
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating):hover {
 	color: #ffd8a6
@@ -1009,3 +1010,27 @@ a:focus {
 		left: 100%
 	}
 }
+.material-icons {
+	text-rendering: optimizeLegibility;
+	-webkit-font-feature-settings: 'liga';
+	-moz-font-feature-settings: 'liga';
+	font-feature-settings: 'liga'
+}
+
+@media only screen and (min-width: 1201px) {
+  .imgres {
+  	visibility: visible;
+  }
+}
+
+/*@media only screen and (min-width: 610px) {
+  img.imgres {
+  	visibility: hidden;
+  }
+}*/
+
+/*@media only screen and (min-width: 320px) {
+  .imgres {
+  	visibility: hidden;
+  }
+}*/
