--- a/assets/css/preload.css
+++ b/assets/css/preload.css
@@ -1,135 +1,174 @@
-html, body {
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background: #2D4654;
+body {
+    background:#222;
 }
 
-.loader {
-	width: 130px;
-	height: 170px;
-	position: relative;
-	// background: rgba(black, 0.2); // testing
-	
-	&::before, &::after {
-		content: "";
-		width: 0; 
-		height: 0; 
-		position: absolute;
-		bottom: 30px;
-		left: 15px;
-		z-index: 1;
-		border-left: 50px solid transparent;
-		border-right: 50px solid transparent;
-		border-bottom: 20px solid darken(#2D4654, 10%);
-		transform: scale(0);
-		transition: all 0.2s ease;
-	}
-	&::after {
-		border-right: 15px solid transparent;
-		border-bottom: 20px solid darken(#2D4654, 13%);
-	}
-	
-	.getting-there {
-		width: 120%;
-		text-align: center;
-		position: absolute;
-		bottom: 0;
-		left: -7%;
-		font-family: "Lato";
-		font-size: 12px;
-		letter-spacing: 2px;
-		color: white;
-	}
-	
-	.binary {
-		width: 100%;
-		height: 140px;
-		display: block;
-		color: white;
-		position: absolute;
-		top: 0;
-		left: 15px;
-		z-index: 2;
-		overflow: hidden;
-		
-		&::before, &::after {
-			font-family: "Lato";
-			font-size: 24px;
-			position: absolute;
-			top: 0;
-			left: 0;
-			opacity: 0;
-		}
-		
-		&:nth-child(1) {
-			&::before {
-				content: "0";
-				animation: a 1.1s linear infinite;
-			}
-			&::after {
-				content: "0";
-				animation: b 1.3s linear infinite;
-			}
-		}
-		&:nth-child(2) {
-			&::before {
-				content: "1";
-				animation: c 0.9s linear infinite;
-			}
-			&::after {
-				content: "1";
-				animation: d 0.7s linear infinite;
-			}
-		}
-	}
-	
-	// ACTIVATE
-	&.JS_on {
-		&::before, &::after {
-			transform: scale(1);
-		}
-	}
+* {
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-@keyframes a {
-	0% {
-		transform: translate(30px, 0) rotate(30deg);
-		opacity: 0;
-	}
-	100% {
-		transform: translate(30px, 150px) rotate(-50deg);
-		opacity: 1;
-	}
+
+#btn.active {
+	-webkit-transform: scale3d(0.75,0.75,1);
+	transform: scale3d(0.75,0.75,1);
 }
-@keyframes b {
-	0% {
-		transform: translate(50px, 0) rotate(-40deg);
-		opacity: 0;
-	}
-	100% {
-		transform: translate(40px, 150px) rotate(80deg);
-		opacity: 1;
-	}
+
+#btn {
+    position:absolute;
+    left:0;
+    bottom:0;
+    background-color:#3F5666;
+    border:2px solid #2F3440;
+    width:70px;
+    height:70px;
+    color:#F5E5C0;
+    cursor:pointer;
+    border-radius:50%;
+    text-align:center;
+    vertical-align:middle;
+    line-height:70px;
+   -webkit-transition: -webkit-transform 0.2s ease-out;
+	 transition: transform 0.2s ease-out;
 }
-@keyframes c {
-	0% {
-		transform: translate(70px, 0) rotate(10deg);
-		opacity: 0;
-	}
-	100% {
-		transform: translate(60px, 150px) rotate(70deg);
-		opacity: 1;
-	}
+
+.close {
+    list-style:none;
+    position:absolute;
+    bottom:10px;
+    left:50px;
+    font-size:2em
 }
-@keyframes d {
-	0% {
-		transform: translate(30px, 0) rotate(-50deg);
-		opacity: 0;
-	}
-	100% {
-		transform: translate(45px, 150px) rotate(30deg);
-		opacity: 1;
-	}
+
+.close li {
+    width:70px;
+    height:70px;
+    text-align:center;
+    vertical-align:middle;
+    line-height:70px;
+    border-radius:50%;
+    border:2px solid #2F3440;
+    background:transparent;
+    position:absolute;
+    -webkit-transition:cubic-bezier(0.600,0,0.735,0.045);
+/* older webkit */
+    -webkit-transition:cubic-bezier(0.600,-0.280,0.735,0.045);
+    -moz-transition:cubic-bezier(0.600,-0.280,0.735,0.045);
+    -o-transition:cubic-bezier(0.600,-0.280,0.735,0.045);
+    transition:/* easeInBack */
+    cubic-bezier(0.600,-0.280,0.735,0.045)
+}
+
+.close li:nth-child(1) {
+    left:0;
+    bottom:0;
+    transition-duration: .5s;
+}
+
+.close li:nth-child(2) {
+    left:0;
+    bottom:0;
+    transition-duration: .4s;
+}
+
+.close li:nth-child(3) {
+    left:0;
+    bottom:0;
+    transition-duration: .3s;
+}
+
+.close li:nth-child(4) {
+    left:0;
+    bottom:0;
+  	transition-duration: .2s;
+}
+
+.pop {
+    list-style:none;
+    position:absolute;
+    bottom:10px;
+    left:50px;
+    font-size:2em
+}
+
+.pop li {
+    width:70px;
+    height:70px;
+    text-align:center;
+    vertical-align:middle;
+    line-height:70px;
+    border-radius:50%;
+    border:2px solid #2F3440;
+    background:#F5E5C0;
+    position:absolute;
+    cursor:pointer;
+    color:#3F5666;
+     -webkit-transition:cubic-bezier(0.000,0.630,0.335,1);
+/* older webkit */
+    -webkit-transition:cubic-bezier(0.000,0.630,0.335,1.465);
+    -moz-transition:cubic-bezier(0.000,0.630,0.335,1.465);
+    -o-transition:cubic-bezier(0.000,0.630,0.335,1.465);
+    transition:/* custom */
+ cubic-bezier(0.000,0.630,0.335,1.465)
+}
+
+.pop li:nth-child(1) {
+    left:0;
+    bottom:300px;
+    transition-duration: .3s;
+}
+
+.pop li:nth-child(2) {
+    left:80px;
+    bottom:220px;
+    transition-duration: .4s;
+}
+
+.pop li:nth-child(3) {
+    left:120px;
+    bottom:110px;
+    transition-duration: .5s;
+}
+
+.pop li:nth-child(4) {
+    left:130px;
+    bottom:0;
+    transition-duration: .6s;
+}
+
+li:hover {
+    opacity: 1;
+}
+
+li:not(:hover) {
+  opacity: 0.5;
+  transform: scale(0.8);
+}
+
+.item-open{ 
+  position: absolute;
+  top: 25px;
+  left: 100px;
+  font: .5em Georgia;
+  color:#F5E5C0;
+  -webkit-transition:all 500ms cubic-bezier(0.600,0,0.735,0.045);
+/* older webkit */
+    -webkit-transition:all 500ms cubic-bezier(0.600,-0.280,0.735,0.045);
+    -moz-transition:all 500ms cubic-bezier(0.600,-0.280,0.735,0.045);
+    -o-transition:all 500ms cubic-bezier(0.600,-0.280,0.735,0.045);
+    transition:/* easeInBack */
+all 500ms cubic-bezier(0.600,-0.280,0.735,0.045)
+}
+
+.item-close{ 
+  position: absolute;
+  top: 25px;
+  left: 100px;
+  font: 0.5em Georgia;
+  color:transparent;
+  -webkit-transition:all 200ms cubic-bezier(0.600,0,0.735,0.045);
+/* older webkit */
+    -webkit-transition:all 200ms cubic-bezier(0.600,-0.280,0.735,0.045);
+    -moz-transition:all 200ms cubic-bezier(0.600,-0.280,0.735,0.045);
+    -o-transition:all 200ms cubic-bezier(0.600,-0.280,0.735,0.045);
+    transition:/* easeInBack */
+all 200ms cubic-bezier(0.600,-0.280,0.735,0.045)
 }
