--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ main{
 /* HEADINGS */
 
 
-h1,
+/*h1,
 h2,
 h3 {
     color: #ffffff;
@@ -84,7 +84,7 @@ h6 { font-weight: 300 }
 
 h1 strong{
     font-family: 'rnr-head';
-}
+}*/
 /*---------------------------------------
    LAYOUT          
 -----------------------------------------*/
