--- a/assets/css/svg.css
+++ b/assets/css/svg.css
@@ -23,7 +23,7 @@ svg #svgg path.st0{
 	stroke-width:0;
 	stroke-miterlimit:10;
 	box-shadow: 19px 20px 5px 17px #888;
-	/* -webkit-box-shadow: -5px -5px 5px #888 !important; */
+	-webkit-box-shadow: -5px -5px 5px #888 !important;
 }
 
 
