--- a/assets/css/extendedfullpage.css
+++ b/assets/css/extendedfullpage.css
@@ -5,7 +5,7 @@
 /* ICON STYLES - ICON FROM: http://fontastic.me/
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-@font-face {
+/*@font-face {
   font-family: "untitled-font-1";
   src:url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/untitled-font-1.eot");
   src:url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/untitled-font-1.eot#iefix") format("embedded-opentype"),
@@ -14,7 +14,7 @@
     url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/untitled-font-1.svg#untitled-font-1") format("svg");
   font-weight: normal;
   font-style: normal;
-}
+}*/
 
 [class^="icon-"]:after,
 [class*=" icon-"]:after {
