--- a/assets/css/pillar.css
+++ b/assets/css/pillar.css
@@ -146,6 +146,7 @@ html {
   display: inline-block;
   position: relative;
   top: 37%;
+  color:  white;
   text-align: center;
   text-shadow: 0px 0px 20px #000;
 }
