--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,22 @@ body {
     margin: 0;
     height: 100%;
     padding: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 a {
-    color: #fff;
+    color: #000;
     text-decoration: none;
 }
 body {
     
-background-size: cover;    
-font-family: Open Sans;
-color: white;
+background-size: cover;
+    
+font-family: Open Sans !important;
 }
 ul {
-    /* list-style-type: none; */
-}    padding: 0;
-
+    list-style-type: none;
+    padding: 0;
+}
 
 p{
     font-size: 20px;
@@ -35,7 +35,7 @@ main{
 -----------------------------------------*/
 
 /* FONTS */
-
+/*
 @font-face {
     font-family: 'rnr-head';
     !important src: url('fonts/watchword/watchword_bold_demo-webfont.eot');
@@ -62,15 +62,18 @@ main{
     src: url('../fonts/Walkway_UltraBold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/Walkway_UltraBold-webfont.woff') format('woff'), url('../fonts/Walkway_UltraBold-webfont.ttf') format('truetype'), url('../fonts/Walkway_UltraBold-webfont.svg#walkway_ultraboldregular') format('svg');
     font-weight: normal;
     font-style: normal;
-}
+}*/
 
 /* HEADINGS */
 
 
-/*h1,
+h1,
 h2,
-h3 {
-    color: #ffffff;
+h3,
+h4,
+h5
+p {
+    color: black !important;
     margin-bottom: 30px;
     font-size: 50px;
     font-weight: normal;
@@ -82,9 +85,7 @@ h4,
 h5,
 h6 { font-weight: 300 }
 
-h1 strong{
-    font-family: 'rnr-head';
-}*/
+
 /*---------------------------------------
    LAYOUT          
 -----------------------------------------*/
@@ -129,15 +130,16 @@ h1 strong{
     height: 100%;
 }
 
-.dfooter{
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    /* position: absolute; */
-    /* box-sizing: border-box; */
+/*.dfooter{
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    box-sizing: border-box;
     position:  relative;
-    background-color: #e40101;
+    background-color: #3c444b;
+    top: 645px;
 }
-.wrap {
+*/.wrap {
     margin-left: auto;
     margin-right: auto;
     position: relative;
