--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,34 +1,34 @@
 /*responsive styles*/
-.mobile{
+
+.mobile {
     display: none !important;
 }
-
 #social-icons, #logo {
-    width:100%;
+    width: 100%;
     text-align: center;
 }
 /*background for services*/
-.bgpillars{
+
+.bgpillars {
     background: url("../images/background/bgpillars.jpg");
-    width:  100% !important;
+    width: 100% !important;
     height: 400px !important;
     background-repeat: no-repeat;
     background-size: cover;
 }
 /*background in homepage*/
-.bg{
+
+.bg {
     background: url("../images/background/bbg1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-.Contactbg1{
+.Contactbg1 {
     background: url("../images/background/bgcontact.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-.Pillarbg1{
+.Pillarbg1 {
     background: url("../images/background/bgpillar.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -36,283 +36,252 @@
 /*end of background in homepage*/
 
 /*Images on every services Pillars*/
-#lead{
+
+#lead {
     background: url(../images/background/pillars/bglead.png);
     background-size: cover;
-    width:  45%;
+    width: 45%;
 }
-
-#backend{
+#backend {
     background: url(../images/background/pillars/bgbackend.jpg);
     background-size: cover;
-    width:  45%;
+    width: 45%;
 }
-
-#frontend{
+#frontend {
     background: url(../images/background/pillars/bgfrontend.jpg);
     background-size: cover;
-    width:  45%;
+    width: 45%;
 }
-
-#social{
+#social {
     background: url(../images/background/pillars/bgsocial.jpg);
     background-size: cover;
-    width:  45%;
+    width: 45%;
 }
-
-#webdev{
+#webdev {
     background: url(../images/background/pillars/webdev1.jpg);
     background-size: cover;
-    width:  45%;
+    width: 45%;
 }
-
-#marketing{
+#marketing {
     background: url(../images/background/pillars/marketing1.jpg);
     background-size: cover;
-    width:  45%;
+    width: 45%;
 }
-
-#backcon{
+#backcon {
     background: url(../images/background/pillars/bgcontact.jpg);
-    position:  relative;
+    position: relative;
     object-fit: contain;
     background-position: center;
     background-size: cover;
 }
 /*end*/
 
-.icoo{
-   background: url("../Logo/DeegeelabLogo.png");
-   position: relative;
-   height: 80px;
-   width: 80px;
+.icoo {
+    background: url("../Logo/DeegeelabLogo.png");
+    position: relative;
+    height: 80px;
+    width: 80px;
 }
-
-#modal_services .modal-content h1{
+#modal_services .modal-content h1 {
     font-size: 2.5rem;
     text-align: center;
 }
-
-
-
-@media (min-width: 1141px) { /* Desktop */
-    #display{
-        padding-left: 100px; 
+@media (min-width: 1141px) {
+    /* Desktop */
+    #display {
+        padding-left: 100px;
         padding-right: 100px;
     }
-    .services .col{
+    .services .col {
         margin-top: 40px;
     }
-    .rnr-parallax3 div[data-display='services-slider']{
+    .rnr-parallax3 div[data-display='services-slider'] {
         display: none;
     }
-    .rnr-parallax4 div[data-display='portfolio-slider']{
+    .rnr-parallax4 div[data-display='portfolio-slider'] {
         display: none;
     }
-    .rnr-parallax5 div[data-display='team-slider']{
+    .rnr-parallax5 div[data-display='team-slider'] {
         display: none;
     }
-    .fp-slidesNav{
+    .fp-slidesNav {
         display: none;
     }
-    .portfolio-grid .slide{
-
-    }
-    #modal_services img{
+    .portfolio-grid .slide {}
+    #modal_services img {
         width: 100px;
     }
 }
-@media (max-width: 1140px) { /* Desktop */
-    #display{
-        padding-left: 100px; 
+@media (max-width: 1140px) {
+    /* Desktop */
+    #display {
+        padding-left: 100px;
         padding-right: 100px;
     }
-    .services .col{
+    .services .col {
         margin-top: 40px;
     }
-    #display_right img{
-        width:80%;
+    #display_right img {
+        width: 80%;
     }
-    #display_right #hand{
+    #display_right #hand {
         width: 60%;
         top: 30%;
     }
-    .rnr-parallax3 div[data-display='services-slider']{
+    .rnr-parallax3 div[data-display='services-slider'] {
         display: none;
     }
-    .rnr-parallax4 div[data-display='portfolio-slider']{
+    .rnr-parallax4 div[data-display='portfolio-slider'] {
         display: none;
     }
-    .rnr-parallax5 div[data-display='team-slider']{
+    .rnr-parallax5 div[data-display='team-slider'] {
         display: none;
     }
-    .fp-slidesNav{
+    .fp-slidesNav {
         display: none;
     }
-    #modal_services img{
+    #modal_services img {
         width: 100px;
     }
 }
-@media (max-width: 993px) { /* Tables */
-    #display{
-        padding-left: 50px; 
+@media (max-width: 993px) {
+    /* Tables */
+    #display {
+        padding-left: 50px;
         padding-right: 50px;
     }
-    .services .col{
+    .services .col {
         margin-top: 20px;
     }
-    #display_right{
+    #display_right {
         display: block;
     }
-    #display_right img{
-        width:80%;
+    #display_right img {
+        width: 80%;
     }
-    #display_right #hand{
-        width:50%;
-        margin:0 auto;
+    #display_right #hand {
+        width: 50%;
+        margin: 0 auto;
         top: 40%;
     }
-    .rnr-parallax3 div[data-display='services-slider']{
+    .rnr-parallax3 div[data-display='services-slider'] {
         display: none;
     }
-    .rnr-parallax4 div[data-display='portfolio-slider']{
+    .rnr-parallax4 div[data-display='portfolio-slider'] {
         display: none;
     }
-    .rnr-parallax5 div[data-display='team-slider']{
+    .rnr-parallax5 div[data-display='team-slider'] {
         display: none;
     }
-    .fp-slidesNav{
+    .fp-slidesNav {
         display: none;
     }
-    #modal_services img{
+    #modal_services img {
         width: 90px;
     }
-    #modal_services img.logo{
+    #modal_services img.logo {
         width: 200px;
     }
 }
-@media (min-width: 320px) and (max-width: 601px) { /* Smartphones */
-    #display{
-        padding-left: 20px; 
+@media (min-width: 320px) and (max-width: 601px) {
+    /* Smartphones */
+    #display {
+        padding-left: 20px;
         padding-right: 20px;
     }
-    .services .col{
+    .services .col {
         margin-top: 0px;
     }
-    #display_right{
+    #display_right {
         display: none;
     }
-
-    #display_form h2{
+    #display_form h2 {
         font-size: 30px;
     }
-
-    .rnr-parallax2{
+    .rnr-parallax2 {
         /*text-align: left !important;*/
     }
-
-    h1{
+    h1 {
         font-size: 2.5rem;
     }
-    p{
+    p {
         font-size: 15px;
     }
-
-    .rnr-button.flat{
+    .rnr-button.flat {
         font-size: 15px;
     }
-
-    .rnr-button.flat i{
+    .rnr-button.flat i {
         line-height: 45px;
     }
-
-    .rnr-parallax3 div[data-display='services-grid']{
+    .rnr-parallax3 div[data-display='services-grid'] {
         display: none;
     }
-
-    .rnr-parallax3 div[data-display='services-slider']{
+    .rnr-parallax3 div[data-display='services-slider'] {
         display: block;
     }
-
     .rnr-parallax3 div[data-display='services-slider'] .carousel {
         height: 200px !important;
     }
-
-    .rnr-parallax3 div[data-display='services-slider'] .carousel p{
+    .rnr-parallax3 div[data-display='services-slider'] .carousel p {
         font-size: 15px !important;
     }
-
-    .rnr-parallax4 div[data-display='portfolio-grid']{
+    .rnr-parallax4 div[data-display='portfolio-grid'] {
         display: none;
     }
-
-    .rnr-parallax4 div[data-display='portfolio-slider']{
+    .rnr-parallax4 div[data-display='portfolio-slider'] {
         display: block;
     }
-
-    .rnr-parallax4 div[data-display='portfolio-slider'] img{
-        width:50%;
+    .rnr-parallax4 div[data-display='portfolio-slider'] img {
+        width: 50%;
     }
-
-    .rnr-parallax4 div[data-display='portfolio-slider']  .carousel p{
+    .rnr-parallax4 div[data-display='portfolio-slider'] .carousel p {
         font-size: 15px !important;
     }
-
-    .rnr-parallax5 div[data-display='team-grid']{
+    .rnr-parallax5 div[data-display='team-grid'] {
         display: none;
     }
-
-    .rnr-parallax5 div[data-display='team-slider']{
+    .rnr-parallax5 div[data-display='team-slider'] {
         display: block;
     }
-    .fp-slidesNav{
+    .fp-slidesNav {
         display: block;
     }
-
-    .slide .fp-tableCell{
+    .slide .fp-tableCell {
         height: 100% !important;
     }
-
-    .fp-controlArrow{
-        top:60% !important;
+    .fp-controlArrow {
+        top: 60% !important;
     }
-
-    #modal_services img{
+    #modal_services img {
         width: 80px;
     }
 }
-
-p.label{
+p.label {
     font-size: 15px;
 }
-
-.rnr_team .images{
+.rnr_team .images {
     width: 100px;
     height: 100px;
     overflow: hidden;
     border-radius: 50%;
-    margin: 0 auto;   
-    margin-top: 20px; 
+    margin: 0 auto;
+    margin-top: 20px;
 }
-
-.rnr_team .images img{
+.rnr_team .images img {
     width: 100px;
 }
-
-.rnr_team .topImage{
+.rnr_team .topImage {
     position: absolute;
 }
-
-.rnr_team .topImage img{
+.rnr_team .topImage img {
     position: relative;
     width: 50px;
     left: -20px;
     top: -30px;
     /*background: #fff;*/
-    padding: 5px;    
+    padding: 5px;
 }
-
-.rnr-divider{
+.rnr-divider {
     height: 2px;
     border-left: solid #64c2ec 50px;
     border-right: solid #f74356 50px;
@@ -320,8 +289,7 @@ p.label{
     margin: 0 auto;
     margin-bottom: 25px;
 }
-
-.rnr-button{
+.rnr-button {
     /*background: #f00 !important;*/
     background: transparent !important;
     border: 2px solid #ccc;
@@ -331,36 +299,30 @@ p.label{
     text-transform: uppercase;
     min-width: 150px;
 }
-
-.rnr-button:hover{
+.rnr-button:hover {
     background-color: #0a99ab !important;
     border: 2px solid #fff;
     padding: 10px;
     /*color: #3/33;*/
     border-radius: 5px;
 }
-
-.rnr-parallax4 .card{
+.rnr-parallax4 .card {
     background-color: transparent !important;
     box-shadow: none !important;
     text-align: left;
 }
-
-.line{
-    border:2px solid #ccc;
+.line {
+    border: 2px solid #ccc;
     min-height: 260px;
 }
-
-.line small{
+.line small {
     font-size: 60% !important;
 }
-
-.invert{
+.invert {
     filter: invert(100%);
     -moz-filter: invert(100%);
     -webkit-filter: invert(100%);
 }
-
 .hexagon {
     clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
     background-size: cover;
@@ -385,49 +347,39 @@ p.label{
     height: 150px;
     width: 130px;
 }
-
-.portfolio-icon{
-    top: 40%; 
+.portfolio-icon {
+    top: 40%;
     position: relative;
 }
-
-.portfolio-icon .material-icons{
+.portfolio-icon .material-icons {
     font-size: 40px;
 }
-
-.portfolio-icon .left{
-    position: absolute; 
+.portfolio-icon .left {
+    position: absolute;
     left: -10px;
 }
-
-.portfolio-icon .right{
-    position: absolute; 
+.portfolio-icon .right {
+    position: absolute;
     right: -10px;
 }
-
-.carousel{
+.carousel {
     height: 400px !important;
 }
-
-.rnr-button.flat{
+.rnr-button.flat {
     padding: 0px;
     margin-top: 10px;
-    min-width: 100px;  
+    min-width: 100px;
 }
-
-.rnr-button.flat i{
-    line-height: 30px;  
+.rnr-button.flat i {
+    line-height: 30px;
 }
-
-.carousel .logo{
-    width:100px;    
+.carousel .logo {
+    width: 100px;
 }
-
-.carousel.carousel-slider .carousel-item p{
+.carousel.carousel-slider .carousel-item p {
     font-size: 20px !important;
 }
-
-#rnr_team .label{
+#rnr_team .label {
     background-color: #0d1216;
     top: -40px;
     position: relative;
@@ -435,58 +387,50 @@ p.label{
     border-radius: 3px;
     border: 2px solid #fff;
 }
-
-#rnr_team .profile{
-    margin-top: 40px; 
-    margin:0 auto; 
-    float:unset; 
-    display: inline-block; 
-    min-width: 150px; 
+#rnr_team .profile {
+    margin-top: 40px;
+    margin: 0 auto;
+    float: unset;
+    display: inline-block;
+    min-width: 150px;
     margin-left: 25px;
     margin-right: 25px;
 }
-
-#rnr_team .profile .chi{
-    background:url('../images/team/chi.png') no-repeat; 
-    background-size: cover; 
+#rnr_team .profile .chi {
+    background: url('../images/team/chi.png') no-repeat;
+    background-size: cover;
     display: inline-block;
     -webkit-transition-duration: 0.1s;
     transition-duration: 0.1s;
 }
-
-#rnr_team .profile .chi:hover{
-    background:url('../images/team/chi2.png') no-repeat; 
-    background-size: cover; 
+#rnr_team .profile .chi:hover {
+    background: url('../images/team/chi2.png') no-repeat;
+    background-size: cover;
     display: inline-block;
     -webkit-transition-duration: 0.1s;
     transition-duration: 0.1s;
 }
-
-#rnr_team .profile .chi{
-    background:url('../images/team/chi.png') no-repeat; 
-    background-size: cover; 
+#rnr_team .profile .chi {
+    background: url('../images/team/chi.png') no-repeat;
+    background-size: cover;
     display: inline-block;
     -webkit-transition-duration: 0.1s;
     transition-duration: 0.1s;
 }
-
-#rnr_team .profile:hover > .hexagon{
+#rnr_team .profile:hover>.hexagon {
     -webkit-filter: grayscale(0);
     filter: grayscale(0);
     -webkit-transition-duration: 0.1s;
     transition-duration: 0.1s;
 }
-
-#rnr_team .label span{
+#rnr_team .label span {
     font-size: 15px;
     line-height: 0px;
 }
-
-#rnr_team .label span.position{
+#rnr_team .label span.position {
     font-size: 10px;
     line-height: 0px;
 }
-
 /*#modal_services{
     max-height: none;
     top: 0px;
@@ -494,85 +438,72 @@ p.label{
     overflow: hidden;
 }
 */
-#modal_services .modal-content{
+
+#modal_services .modal-content {
     overflow: hidden;
 }
-
-.s5ths,
-.m5ths,
-.l5ths,
-.xl5ths {
-  margin-left: auto;
-  left: auto;
-  right: auto;
+.s5ths, .m5ths, .l5ths, .xl5ths {
+    margin-left: auto;
+    left: auto;
+    right: auto;
 }
-
 .row .col.s5ths {
-  width: 20%;
+    width: 20%;
 }
-
 @media only screen and (min-width: 601px) {
-  .row .col.m5ths {
-    width: 20%;
-  }
+    .row .col.m5ths {
+        width: 20%;
+    }
 }
-
 @media only screen and (min-width: 993px) {
-  .row .col.l5ths {
-    width: 20%;
-  }
+    .row .col.l5ths {
+        width: 20%;
+    }
 }
-
 @media only screen and (min-width: 1201px) {
-  .row .col.xl5ths {
-    width: 20%;
-  }
+    .row .col.xl5ths {
+        width: 20%;
+    }
 }
-
-#fullpage, #modal_services .modal-content{
+#fullpage, #modal_services .modal-content {
     position: absolute !important;
-    width:100% !important;
-    top:0px;
+    width: 100% !important;
+    top: 0px;
 }
-
-#modal_services .modal-content{
+#modal_services .modal-content {
     position: relative !important;
-    width:100% !important;
-    top:0px;
+    width: 100% !important;
+    top: 0px;
 }
-
-#modal_services canvas{
+#modal_services canvas {
     position: absolute !important;
 }
-
 /* fallback */
 
 .material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
 }
-
-img.icondrop{
-    width:100px;
-
+img.icondrop {
+    width: 100px;
 }
-
 span.head {
-font-size: 25px;
-font-weight: 600;
+    font-size: 25px;
+    font-weight: 600;
 }
 /*Additional Css*/
+
 [data-collapse] {
-  display:none
+    display: none
 }
