--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -5,7 +5,7 @@ header {
     overflow: hidden;
     transition: .32s ease-out;
     z-index: 2;
-    background: #384047e8;
+    background: rgba(89, 100, 111, 0.8);
 }
 header a, .navBtn {
     color: #fff;
