--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,12 @@ html, body {
 }
 a {
     color: #000;
+    line-height:  64px;
     text-decoration: none;
 }
 body {
     background-size: cover;
-    font-family: Open Sans !important;
+/*     font-family: Open Sans !important; */
 }
 ul {
     list-style-type: none;
@@ -65,7 +66,7 @@ h1, h2, h3, h4, h5 p {
     margin-bottom: 30px;
     font-size: 50px;
     font-weight: normal;
-    font-family: 'walkway_semiboldregular';
+/*     font-family: 'walkway_semiboldregular'; */
     line-height: 1.2;
     margin-top: 20px;
 }
@@ -941,4 +942,22 @@ ul.skills {
 }
 .hovbutton:hover {
     fill: black;
+}
+
+.form_holder{
+    border-top: #02bad0 8px solid; //#4a4949
+    max-width:900%;
+    max-width: 900px;
+}
+.left-border{
+    border-left: 1px #02bad0 solid;    
+}
+
+.overlap-gradient{
+	width:100%;
+	height: 100%;
+	background: -moz-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));;
+	background: -webkit-linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));;
+	background: linear-gradient(rgba(255,255,255,1),rgba(255,255,255,0.5),rgba(255,255,255,0));
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
 }
