--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -947,7 +947,7 @@ ul.skills {
 }
 
 .form_holder{
-    border-top: #02bad0 8px solid; //#4a4949
+    border-top: #02bad0 5px solid; //#4a4949
     max-width:900%;
     max-width: 900px;
 }
@@ -993,4 +993,14 @@ ul.skills {
 
 #footer img.social-icons{
     margin-right:10px;
+}
+
+.node{
+       min-width:100px;
+       min-height: 30px;
+       background: rgba(0, 0, 0, 0.8);
+       padding:5px;
+       color: #fff;
+       text-align: center;
+       border-radius:  3px;
 }
