--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,9 +67,9 @@ main {
 h1, h2, h3, h4, h5 p {
     color: black !important;
     margin-bottom: 30px;
-    font-size: 50px;
+    /* font-size: 50px; */
     font-weight: normal;
-/*     font-family: 'walkway_semiboldregular'; */
+    /*     font-family: 'walkway_semiboldregular'; */
     line-height: 1.2;
     margin-top: 20px;
 }
@@ -199,6 +199,7 @@ h4, h5, h6 {
     padding: 5px;
     /* color: #fff; */
     background-color: rgba(0, 0, 0, 0.8);
+    z-index:  10000;
 }
 #social-icons ul {
     padding: 0;
@@ -1042,11 +1043,13 @@ ul.skills {
 
 .node p{
     font-size:10px;
+    margin-top: 0px;
 }
 
 
 .bold{
     font-weight:bold;
+    margin:  0px;
 }
 
 .node a{
@@ -1055,4 +1058,32 @@ ul.skills {
 
 div[data-anchor="home"] .fp-tableCell{
     background: rgba(72, 72, 72, 0.89);
+}
+
+#menu{
+    background:rgba(16, 16, 16, 0.9);
+}
+
+.menu{
+    position:absolute;
+    top: 0%;
+    left: 0%;
+}
+
+.bulleted{
+    font-size: 10px;
+    margin-right:20px;
+}
+
+.paragraph{
+    font-size: 20px;
+}
+
+.services-content{
+    max-height: 768px;
+    overflow: scroll;
+}
+
+.fullwidth{
+    overflow:hidden;
 }
