Updated Home. Added Banner and mouse icon;

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -117,7 +117,7 @@ p.label {
     }
 }
 #fullpage, #modal_services .modal-content {
-    position: absolute !important;
+    /* position: absolute !important; */
     width: 100% !important;
     top: 0px;
 }
