--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -959,6 +959,10 @@ ul.skills {
     border-left: 1px #02bad0 solid;    
 }
 
+.logo-color{
+    color:#02bad0 !important;
+}
+
 .overlap-gradient{
 	width:100%;
 	height: 100%;
@@ -1057,7 +1061,7 @@ ul.skills {
 }
 
 div[data-anchor="home"] .fp-tableCell{
-    background: rgba(72, 72, 72, 0.89);
+    background: rgba(72, 72, 72, 0.5);
 }
 
 #menu{
