--- a/assets/css/svg.css
+++ b/assets/css/svg.css
@@ -24,7 +24,7 @@ svg #svgg path.st0 {
 }
 @media screen and (max-width: 420px) {
 	svg:not(:root) {
-		max-height: 250px
+		max-height: 250px;
 	}
 }
 /*svg path#path4 {
