updated terms and policy;

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -240,4 +240,7 @@ span.head {
     svg:not(:root) {
         max-height: 200px !important;
     }
+    .fullwidth{
+        overflow-x:scroll !important;
+    }
 }
